--- a/index.html
+++ b/index.html
@@ -10,91 +10,27 @@
     </head>
 <body>
 
-<script type="text/javascript">
+    <div class="wrapper">
 
-$(document).ready(function () {
+    <form id="frm1" class="userInput" action="/action_page.php">
+        Location: <input type="text" name="Location" id="travelLocation"><br>
+        Month: <input type="text" name="Month" id="travelMonth"><br><br>
+        <input id="submitBtn" type="button" onclick="getData()" value="Submit">
+        <input id="resetBtn" class="hidden" type="button" onclick="window.location.reload()" value="Reset">
+    </form>
 
-// API to HTML 1
+    <div class="containerLocation">
+    <!-- html tags and content is added here directly through the jquery -->
+    </div>
+ 
+    <input id="seasonBtn" class="hidden" type="button" onclick="testSeason()" value="Season">
 
-// Accessing an API and returning data
-
-// need NMA API key
-
-// https://www.nma.gov.au/about/our-collection/our-apis
-
-// docs: https://github.com/NationalMuseumAustralia/Collection-API/wiki/Getting-started
-
-// my api key
-
-var key = "234979e2ff9e423095e4b2c869c1c97b"
-
-var query = '';
-
-// API call
-
-var url = 'https://api.geoapify.com/v1/geocode/search?text=london&limit=1&format=json&apiKey=' + key;
-
-$.getJSON(url, function (apiData) {
-
-console.log('im here');
-
-console.log(apiData);
-
-var item = apiData.results[0];
-
-//variables to make it easier to target relevant data from the API
-var storeCity = item.city;
-var storeCountry = item.country;
-var storeLatt = item.lat
-var storeLong = item.lon
-
-var hemisphere = ""
-
-if (storeLong > 0)
-hemisphere = "north"
-else 
-hemisphere = "south"
-
-// // Append the content to the page
-
-// // Option 1
-
-// // create a variable for the title, make it a h2 and add the text
-
-var city = $('<h1>').html('City: ' + storeCity);
-var country = $('<h2>').html('Country: ' + storeCountry);
-var latt = $('<h3>').html('Lattitude: ' + storeLatt);
-var long = $('<h3>').html('Longitude: ' + storeLong);
-var hemi = $('<h3>').html('Hemisphere: ' + hemisphere);
-
-$('.container-1').append(city,country,latt,long,hemi);
-
-// // Option 2
-
-// $('.physdesc').html(item.physicalDescription);
-
- });
-
- });
-
-</script>
-
-<div class="container-1">
-
-<!-- html tags and content is added here directly through the jquery -->
+    <div class="containerSeason">
+        <!-- html tags and content is added here directly through the jquery -->
+    </div>
 
 </div>
-
-<div class="container-2">
-
-<!-- most of the html is here, content is added when loaded from api -->
-
-<h2>Physical description</h2>
-
-<p class="physdesc"></p>
-
-</div>
-
+<script src="script.js"></script>
 </body>
 
 </html>
