setting up of google image search

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <!-- html tags and content is added here directly through the jquery -->
             </div>
 
+            <div class="containerPhotos">
+                <!-- html tags and content is added here directly through the jquery -->
+            </div>
+
         </div>
 
         <script src="script.js"></script>
