successfully pulling images from google images api

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 Month: <input type="text" name="Month" id="travelMonth"><br><br>
                 <input id="submitBtn" type="button" onclick="getData()" value="Submit">
                 <input id="resetBtn" class="hidden" type="button" onclick="window.location.reload()" value="Reset">
+                <input id="testBtn" type="button" onclick="testData()" value="Test">
             </form>
 
             <div class="containerLocation">
