connected to weatherAPI, not targeted results in date or location but its a start.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                 
         </div>
 
+        <!-- change CSS image width and height from Pixels to VW/VH its not really responsive -->
+        <!-- change CSS image width and height from Pixels to VW/VH its not really responsive -->
+
+<!-- Dont miss this before submitting -->        <!-- Dont miss this before submitting -->        <!-- Dont miss this before submitting -->
+      
+        <!-- change CSS image width and height from Pixels to VW/VH its not really responsive  -->
+        <!-- change CSS image width and height from Pixels to VW/VH its not really responsive  -->
+
         <div class="containerPhotos row">
             <div class="photoHeading capitilise">
             <!-- City Name will go here above 10 photos from search results -->
