Now with functioning weather updates!!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </div>
 
             <div id="idWeather" class=" containerWeather column">
-            <h1 class="title"> Weather Details</h1>
+            <h1 class="title"> Weather </h1>
+            <h4> Daily averages for season</h4>
             <!-- html tags and content is added here directly through the jquery -->
             </div>
 
