--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          <div class="row">
             <div class="containerForm column">
                 <form id="frm1" class="userInput" action="/action_page.php">
+                    <p class="formText"> For best results, enter a city and country</p>
                     Destination: <input type="text" name="Location" id="travelLocation"><br><br>
                     Travel month: <input type="text" name="Month" id="travelMonth"><br><br>
                     <input id="submitBtn" type="button" onclick="getData()" value="Submit">
