--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://cdn.glitch.global/c24b532d-8e00-4c75-999a-c8354f109976/favicon.ico?v=1666652556128"
     />
   </head>
-  <body onload="delayLoad()" id="body">
+  <body onload="userIP()" id="body">
     <div id="loadingContent" class="centerText">
       <h2>
         Please keep your seat belt fastened until the plane has stopped moving
