Much better responsiveness

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       </div>
     </div>
 
-    <div id="header" class="hidden">
+    <div id="header" class="hidden ">
+    <img class="headerLogo" src="logo.png" alt="Destination Unknown Logo">
       <div class="containerHeader">
         <!-- Text about users location and weather goes here -->
       </div>
