--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     /><br /><br />
                     Travel month:
                     <input 
+                    class="capitilise"
                     type="text" 
                     name="Month" 
                     id="travelMonth"
