added lettersOnly check to month input

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 name="Location"
                 id="travelLocation"
                 placeholder="Hydra Greece"
-                onkeyup="lettersOnly()"
+                onkeyup="locationLettersOnly()"
               /><br /><br />
               Travel month:
               <input
@@ -64,7 +64,7 @@
                 name="Month"
                 id="travelMonth"
                 placeholder="July"
-                onkeyup="lettersOnly()"
+                onkeyup="monthLettersOnly()"
               /><br /><br />
               <a id="submitBtn" class="button" type="submit" onclick="errorChecker()"
                 >Submit</a
